--- a/config/EuRoC/EuRoC.yaml
+++ b/config/EuRoC/EuRoC.yaml
@@ -18,8 +18,8 @@ Camera.p2: 1.76187114e-05
 Camera.width: 752
 Camera.height: 480
 
-ImageGridHeight: 100
-ImageGridWidth: 100
+ImageGridHeight: 30
+ImageGridWidth: 30
 
 # Camera frames per second 
 Camera.fps: 20.0
@@ -38,7 +38,7 @@ ThDepth: 35
 #--------------------------------------------------------------------------------------------
 
 # ORB Extractor: Number of features per image
-ORBextractor.nFeatures: 1200
+ORBextractor.numFeatures: 500
 
 # ORB Extractor: Scale factor between levels in the scale pyramid 	
 ORBextractor.scaleFactor: 1.2
