--- a/config/EuRoC/EuRoC.yaml
+++ b/config/EuRoC/EuRoC.yaml
@@ -57,6 +57,7 @@ ORBextractor.minDist: 20
 #--------------------------------------------------------------------------------------------
 # Viewer Parameters
 #--------------------------------------------------------------------------------------------
+Viewer.FeatureShow: 1
 Viewer.KeyFrameSize: 0.05
 Viewer.KeyFrameLineWidth: 1
 Viewer.GraphLineWidth: 0.9
