--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,3 +70,6 @@ target_link_libraries(test_glog ${PROJECT_NAME})
 
 add_executable(test_pangolin test/test_pangolin.cpp)
 target_link_libraries(test_pangolin ${PROJECT_NAME})
+
+add_executable(test_pnp test/test_OpencvPnP.cpp)
+target_link_libraries(test_pnp ${PROJECT_NAME})
