ceres optimize the pnp solution by the analytical derivative

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,3 +73,12 @@ target_link_libraries(test_pangolin ${PROJECT_NAME})
 
 add_executable(test_pnp test/test_OpencvPnP.cpp)
 target_link_libraries(test_pnp ${PROJECT_NAME})
+
+
+add_executable(test_BA
+    test/test_ceres/test_BA.cpp
+    test/test_ceres/pose_local_parameterization.cpp
+    test/test_ceres/pose_local_parameterization.h
+        test/test_ceres/se3.h
+)
+target_link_libraries(test_BA ${PROJECT_NAME})
