--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 2.8.3)
 
 #set( CMAKE_BUILD_TYPE Release )
-set( CMAKE_CXX_FLAGS "-std=c++11" )
+SET( CMAKE_CXX_FLAGS "-std=c++11 -O3")
 
 project(RAIN-VIO)
 
